Fixes for legacy browsers without browser.search, menuProperties.visible page tiles empty tile is transparent duplicate inject_pageTiles.js removed removed reference to scaleAndPositionQuickMenu generic method for getting node icons with fallback cs options styling fixes page tiles handle folders

--- a/src/inject.css
+++ b/src/inject.css
@@ -232,6 +232,9 @@
 .CS_pageTile.dragover {
 	background-color: #ccdbe8;
 }
+.CS_pageTilesEmptyTile {
+	opacity:0;
+}
 #CS_underDiv {
 	width:100%;
 	height:100%;
